FullSb1-27-apr-15/src/objects/Rest_Event_API_Logs__c.object
<CustomObject>
    <fields>
        <fullName>EndPoint__c</fullName>
        <label>EndPoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Record_Id__c</fullName>
        <label>Related Record Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Param_or_Body__c</fullName>
        <label>Request Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Rest_Event_API_Logs</label>
    <nameField>
        <displayFormat>Log-{000000000}</displayFormat>
        <label>Rest_Event_Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rest_Event_API_Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>